# aoc2023

./: .gitignore  CMakeLists.txt  README.md
01/: CMakeLists.txt  first_star.cpp  second_star.cpp
02/: 2_1.cpp  2_2.cpp
03/: 3_1.cpp  3_2.cpp
04/: 4_1.cpp  4_2.cpp
05/: 5_1.cpp  5_2.cpp
06/: 6_1.cpp  6_1_bruteforce.cpp  6_2.cpp  6_2_bruteforce.cpp
07/: 7_1.cpp  7_2.cpp
08/: 8_1.cpp  8_2.cpp
09/: 9_1.cpp  9_2.cpp
