cmake_minimum_required(VERSION 3.23)
project(aoc2023)

set(CMAKE_CXX_STANDARD 20)

add_executable(1_1
        01/first_star.cpp)

add_executable(1_2
        01/second_star.cpp)

add_executable(2_1
        02/2_1.cpp)

add_executable(2_2
        02/2_2.cpp)

add_executable(3_1
        03/3_1.cpp)

add_executable(3_2
        03/3_2.cpp)

add_executable(4_1
        04/4_1.cpp)

add_executable(4_2
        04/4_2.cpp)

add_executable(5_1
        05/5_1.cpp)

add_executable(5_2
        05/5_2.cpp)

add_executable(6_1
        06/6_1.cpp)

add_executable(6_2
        06/6_2.cpp)